Bug Fixes
Fixed a bug that caused the terminal to be misaligned in the UI, causing multiple terminals to be misaligned and a second terminal to be unreachable

Fixed a bug that caused the content of the file getting sent to the LSP twice

--- a/src/styles/terminal.css
+++ b/src/styles/terminal.css
@@ -11,7 +11,9 @@
 }
 
 .terminal-hidden{
-    display: none;
+    visibility: hidden;
+    position: absolute;
+    z-index: -1;
 }
 
 .hidden {
@@ -29,19 +31,18 @@
 #terminal-tab-bar{
     font-family: Hack Mono;
     width: 150px;
-    height: 100%;
+    height: 300px;
     gap: 5px;
     background-color: var(--terminal-background);
     color: var(--text-primary);
     border-left: 1px solid var(--text-secondary);
     z-index: 1;
     box-sizing: border-box;
-    top: 0;
     right: 0;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
-    position: relative;
+    position: absolute;
     overflow-x: hidden;
     overflow-y: auto;
     white-space: nowrap;
@@ -62,7 +63,7 @@ font-family: inherit;
 #terminal-tab-container{
     font-family: Hack Mono;
     transition: max-height 0.3s ease-out, opacity 0.3s ease-out, padding 0.3s ease-out, border-top 0.3s ease-out;
-    width: 100%;
+    width: calc(100% - 150px);
     height: 300px;
     padding-top: 10px;
     padding-left: 10px;
